# qsoft-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  geometry.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  ColorBlend.h  DoubleBuffer.h  IRenderView.h  Layer.cpp  Layer.h  Node.cpp  Node.h  Render.cpp  Render.h  RenderHelper.h  RenderThread.cpp  RenderThread.h  RenderWidget.cpp  RenderWidget.h  Shader.h  SquareCubeShader.h  Texture.cpp  Texture.h  TriangleData.h  main.cpp
test/: BunnyShader.h  MainWindow.cpp  MainWindow.h  main.cpp
